--- a/app.json
+++ b/app.json
@@ -1,43 +1,24 @@
 {
-	"name": "Heroku AriaNG 21vianet. Heroku AriaNG 世纪互联版",
-	"description": "Run ariaNG on heroku",
-	"repository": "https://github.com/xinxin8816/heroku-ariang-21vianet",
-	"keywords": ["AriaNG"],
-	"env": {
-		"HEROKU_APP_NAME": {
-			"description": "This should be the same as \"App name\" above.",
-			"value": ""
-		},
-		"ARIA2C_SECRET": {
-			"description": "Aria2c's secret",
-			"value": ""
-		},
-		"RCLONE_CONFIG": {
-			"description": "Rclone config to mount in one line, replace line breaks with \"\\n\"",
-			"required": false
-		},
-		"RCLONE_DESTINATION": {
-			"description": "Rclone destination path, format \"[drivename A]:[remove path A]\"",
-			"required": false,
-			"value": "Google:tmp"
-		},
-		"RCLONE_DESTINATION_2": {
-			"description": "If you mount a second cloud drive, then fill in \"[drivename B]:[remove path B]\"",
-			"required": false,
-			"value": "OneDrive:tmp"
-		},
-		"UNPACK_PASSWORDS": {
-			"description": "unpack passwords in one line, replace line breaks with \"\\n\"",
-			"required": false,
-			"value": ""
-		}
-	},
-	"buildpacks": [
-		{
-			"url": "heroku/nodejs"
-		},
-		{
-			"url": "https://github.com/opendoor-labs/heroku-buildpack-p7zip"
-		}
-	]
+  "name": "AriaNg 21vianet",
+  "description": "A web for torrenting",
+  "repository": "https://github.com/xinxin8816/heroku-ariang-21vianet",
+  "env": {
+    "ARIA2C_SECRET": {
+      "description": "AriaNg login code"
+    },
+    "RCLONE_CONFIG": {
+      "description": "Configuration of rclone (  do not delete the config name -> [CONFIG NAME] )",
+      "value": "Use backslash and n for linebreak" 
+    },
+    "RCLONE_DESTINATION": {
+      "description": "Destination of rclone ( the format is -> CONFIG NAME:Folder destination )",
+      "value": "CONFIG NAME:Folder destination"
+    }
+  },
+  "formation": {
+    "web": {
+      "amount": 1,
+      "size": "M"
+    }
+  }
 }
